@@ -1,5 +1,6 @@
 Akeeba Data Compliance 3.1.1
 ================================================================================
+~ Changed the fake email domain used when pseudonymising users
 # [HIGH] The Profile Deletions page threw an exception (gh-39)
 # [MEDIUM] Plugins not enabled on clean installation
 
